# DjangoRestUserOverride

./: README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
core/tests/: authentication.http
custom_user/: models.py  serializers.py  urls.py  views.py
custom_user/migrations/: 0001_initial.py
custom_user/tests/: GET.http
custom_user/tests/http/: DELETE.http  GET.http  PATCH.http  POST.http
